--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": " nodemon index.js"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
